tests/ui/consts/const-eval/ub-int-array.stderr
error[E0080]: constructing invalid value at [0]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:20:1
   |
LL | const UNINIT_INT_0: [u32; 3] = unsafe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 12, align: 4) {
               __ __ __ __ 11 11 11 11 22 22 22 22             │ ░░░░....""""
           }

error[E0080]: constructing invalid value at [1]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:29:1
   |
LL | const UNINIT_INT_1: [u32; 3] = unsafe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 12, align: 4) {
               00 00 00 00 01 __ 01 01 02 02 __ 02             │ .....░....░.
           }

error[E0080]: constructing invalid value at [2]: encountered uninitialized memory, but expected an integer
  --> $DIR/ub-int-array.rs:46:1
   |
LL | const UNINIT_INT_2: [u32; 3] = unsafe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 12, align: 4) {
               00 00 00 00 01 01 01 01 02 02 02 __             │ ...........░
           }

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
